--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
 - type: pserv
   name: mysql
-  plan: standard
+  plan: free 
   env: docker
   autoDeploy: false
   disk:
@@ -19,6 +19,6 @@ envVarGroups:
   - key: MYSQL_USER
     value: mysql
   - key: MYSQL_PASSWORD
-    generateValue: true
+    generateValue: 3419
   - key: MYSQL_ROOT_PASSWORD
-    generateValue: true
+    generateValue: 0000
